--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
         dependencies {
             classpath 'com.plugin.palladium:palladium:1.0.1'
+            classpath 'com.plugin.trycatch:try-catch-plugin:1.0.1'
         }
     }
 }
