--- a/encode-string/build.gradle
+++ b/encode-string/build.gradle
@@ -38,7 +38,7 @@ publishing{
 publishing{
     repositories {
         maven{
-            url uri('/Users/jackie/Desktop/WorkPlace/Terraria/localMaven')
+            url = uri('../repo')
         }
     }
 }
