--- a/palladium/build.gradle
+++ b/palladium/build.gradle
@@ -32,7 +32,7 @@ publishing{
 publishing{
     repositories {
         maven{
-            url uri('/Users/jackie/Desktop/WorkPlace/Terraria/localMaven')
+            url = uri('../repo')
         }
     }
 }
